# sztu-expense-assisant

./: .gitignore  compose.yaml
api/: Dockerfile  go.mod  go.sum  justfile  main.go
api/cmd/: healthcheck.go  migrate.go  root.go  start.go
api/internal/api/: api.go
api/internal/auth/: jwt.go
api/internal/config/: config.go
api/internal/context/: base_context.go
api/internal/context/api/: api_context.go  api_stage.go  error.go
api/internal/context/expense/: expense_context.go  expense_stage.go
api/internal/context/login/: login_context.go  login_stage.go
api/internal/context/middleware/: middleware_context.go  middleware_stage.go
api/internal/context/user/: user_context.go  user_stage.go
api/internal/grpcclient/: cookie.go  grpc.go  grpc_jwt.go
api/internal/grpcclient/protos/: crawler.pb.go  crawler.proto  crawler_grpc.pb.go
api/internal/lock/: lock.go
api/internal/log/: log.go
config/: redis.conf
config/traefik/: api.yml  web.yml
crawler/: Dockerfile  justfile  main.py  pyproject.toml
crawler/src/config/: __init__.py
crawler/src/grpc/health/v1/: health_pb2.py  health_pb2_grpc.py
crawler/src/grpc/sztuea/v1/: crawler_pb2.py  crawler_pb2.pyi  crawler_pb2_grpc.py
crawler/src/handler/get_cookie/: handler.py
crawler/src/interceptor/: __init__.py  jwt.py
crawler/src/log/: __init__.py
crawler/src/resource/database/: mysql.py
crawler/src/resource/jwt/: __init__.py  token.py
crawler/src/resource/model/: user.py
crawler/src/utils/: ocr.py
web/: main.py  pyproject.toml
web/src/: show.py
web/templates/: index.html  user.html
(+9 files in other folders)
