[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["zhangfish <noumi_kudryavka@foxmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
pandas = "^2.2.3"
flake8 = "^7.1.1"
requests = "^2.32.3"


[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
